Changelog
---------

v7.5.1:

v7.5.0:
 SportsTracker changes:
 - Java 9 / 10 update
   - updated Maven plugins
   - updated all dependencies / libraries to current versions
   - updated ControlsFX to version 9.0.0
 - JEP 226 usage: converted all translation files of the resource bundles to
   UTF-8 encoding and removed all Unicode escape sequences (e.g. \u00c4)
   - creation or update of translation files is much easier now (see I18N.txt)
 - fixed encoding problems in dutch translation
 - update to JFreeChart 1.5.0, does not need the JCommon library anymore
 - added official JFreeChart-FX 1.0.0 library, custom patch not needed anymore
 - updated Kotlin to version 1.2.31
 - updated documentation for project import and IDE setup in IDEA and Eclipse
 - migrated all unit tests to JUnit 5 (version 5.1.0)
   - provides better testing of expected exception calls and handling
 ExerciseViewer changes:
 - GarminFitParser: bugfix for handling of missing sample data,
   e.g. temperature, heartrate, speed
   (GitHub issue #168, occurred with Edge 800 files)
 - Diagram Panel improvements:
   - use of transparent area charts instead of line charts
   - added crosshair lines when clicking a position in the chart
   - use of suited graph colors
   - don't display the diagram chart and axis selection when no diagram data
     available (an info message is shown instead)
   - remove heartrate axis with weird values when no heartrate data available
   => much better readability and comparability
 - Diagram Panel (Issue #162): display an average line for the left value axis
   (just for the left axis and without labels to keep the diagram readable)
 - Main Panel improvements:
   - added heartrate availability info to the Recording Mode section
 - new packaging of native application installers by using Ant and the official
   JavaFX Ant plugin (the Maven plugin used before is not up to date yet and
   contains many bugs)

v7.4.1:
 SportsTracker changes:
 - Calendar View: