@@ -10,4 +10,4 @@ before_install:
 language: java
 
 jdk:
-  - oraclejdk9
+  - oraclejdk10
